# ai-news

./: .env.example  .gitattributes  .gitignore  CHANGELOG_变更日志.md  COMMERCIAL_商业化架构设计.md  FRONTEND_DESIGN_CONSTITUTION_前端设计宪法.md  HANDOVER_项目交接.md  LICENSE  Makefile  PRODUCT_GUIDE.md  PROJECT_CONTEXT.md  README.md  SKILL.md  collector.py  config.yaml  package-lock.json  package.json  pipeline.py  pipeline_stages.py  pipeline_utils.py  pyproject.toml  run-collector.vbs  run-daily.bat  run-daily.vbs  run-weekly.bat
.agents/: deploy_planner.md  performance_tester.md
.playwright-mcp/: page-2026-07-02T10-25-54-057Z.yml
.private/: CODEX_HANDOFF_Codex协作说明.md  HANDOVER_项目交接.md  PROJECT_MEMORY_项目长期记忆.md  SESSION_RULES_会话规则.md
.quality/: accessibility-baseline.json  coverage-baseline.json  performance-baseline.json  test-router-snapshot.json
.workspace/: state.yaml
data/: candidate_concepts.json  inbox.jsonl  mined_article_ids.json  processed_cache.json  source_health.json
deploy/: .dockerignore  Dockerfile  fly.toml
docs/: ARCHITECTURE.md  CODEX.md  DECISIONS.md  DEPLOYMENT_GUIDE.md  DESIGN_SYSTEM.md  ENGINEERING.md  INFORMATION_ARCHITECTURE.md  KNOWLEDGE_CARD_SCHEMA.md  OPENSPEC.md  PERFORMANCE_TEST_PLAN.md  ROADMAP.md  TESTING.md
migrations/: 001_init_entity_versions.sql
prompts/: agent-assess.md  agent-plan.md  agent-synthesize.md  card-write.md  classify.md  concept-decide.md  mine-concepts.md  research.md  score.md  summarize.md  trend-agent-scan.md  trend-agent-synthesize.md  trend.md
reports/: 2026-07-15.md
scripts/: archive_old_articles.py  regen_my.sh  (+17 more)
(+781 files in other folders)
