[project]
name = "ai-news"
version = "0.1.0"
description = "AI-powered daily news digest — fetch, classify, summarize, score, and report"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0",
    "pyyaml>=6.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.15.0",
    "openai>=2.44.0",
    "fastapi>=0.138.1",
    "uvicorn>=0.49.0",
]

[project.scripts]
ai-news = "pipeline:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[tool.pytest.ini_options]
pythonpath = ["."]
